Sutter Health/src/objects/ServiceRequests__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for service requests for portal users</description>
    <fields>
        <fullName>Link_Label__c</fullName>
        <label>Link Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Permissionset_Visibility_To__c</fullName>
        <label>Permissionset Visibility To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Visibility_To__c</fullName>
        <label>Profile Visibility To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Sequence__c</fullName>
        <label>Section Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ServiceRequests</label>
</CustomObject>